@@ -9,6 +9,8 @@ for some pointers and/or read HACKING and doc/CodingStyle.
  o gui: show default event if none selected, fix counter allocation stuff,
   on 2.4 kernel-only is always on. Test RTC on 2.4 and timer int on 2.5
 
+ o autoconf 2.13 is broken
+
 0.7 release
 -----------
 
