@@ -1,5 +1,10 @@
 2003-07-16  John Levon  <levon@movementarian.org>
 
+	* gui/oprof_start.h:
+	* gui/oprof_start.cpp: fixes for CPU_TIMER_INT
+
+2003-07-16  John Levon  <levon@movementarian.org>
+
 	* gui/ui/oprof_start.base.ui: remove add/remove event buttons,
 	fix resize weirdness
 
